// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BlogList /> should render correctly - index 1`] = `
<div>
  <div
    class="sc-kLLXSd hRxycm containerstyles__StyledPageContainer-sc-1117fm5-0 bYpTfs"
    width="default"
  >
    <div
      class="sc-bczRLJ jxMqhd"
    >
      <div
        class="sc-gsnTZi iSNZRr"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-bczRLJ jxMqhd"
    >
      <div
        class="sc-gsnTZi iSNZRr"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-bczRLJ jxMqhd"
    >
      <div
        class="sc-gsnTZi iSNZRr"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-bczRLJ jxMqhd"
    >
      <div
        class="sc-gsnTZi iSNZRr"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-bczRLJ jxMqhd"
    >
      <div
        class="sc-gsnTZi iSNZRr"
        style="margin-left: -0px;"
      />
    </div>
  </div>
  <div
    class="creative-commons__wrapper"
  >
    <div
      class="creative-commons__background"
    />
    <div
      class="subsection__outer creative-commons__inner"
    >
      <h3
        class="subsection__heading"
        id="copyright"
      >
        Copyright
      </h3>
      <span
        class="sc-dkzDqf fKpeRn"
      >
        Most of my photos are licensed under
         
        <a
          aria-label="Creative Commons BY-SA 3.0 (opens in a new tab)"
          class="sc-jqUVSM ehmyNV"
          href="https://creativecommons.org/licenses/by-sa/3.0/"
          rel="noopener noreferrer"
          target="_blank"
        >
          Creative Commons BY-SA 3.0
          <div
            class="sc-kDDrLX ffjHhF"
          >
            <svg
              class="sc-papXJ QvWXe sc-iqcoie iOIaxE"
              height="18"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.5 11.3c.4.4 1 .4 1.4 0L19 6.2V9c0 .6.4 1 1 1s1-.4 1-1V4c0-.6-.4-1-1-1h-5c-.6 0-1 .4-1 1s.4 1 1 1h2.4l-4.9 4.9c-.4.4-.4 1 0 1.4zM19 19c0 1.1-.9 2-2 2H5c-1.1 0-2-.9-2-2V7c0-1.1.9-2 2-2h7v2H5v12h12v-7h2"
              />
            </svg>
          </div>
        </a>
        .
        <br />
        If you are unsure about your right to use them please 
        <a
          class="sc-jqUVSM ehmyNV"
          href="/contact"
        >
          contact me
        </a>
        .
      </span>
    </div>
  </div>
</div>
`;

exports[`<BlogList /> should render correctly authenticated with blogs 1`] = `
<div>
  <div
    class="sc-kLLXSd hRxycm containerstyles__StyledPageContainer-sc-1117fm5-0 bYpTfs"
    width="default"
  >
    <div>
      <a
        aria-label="Add a new blog"
        class="sc-evZas cmFdWC sc-fnykZs iutxuS blogs-list__card"
        href="/create-blog"
      >
        <div
          class="sc-breuTD kENxYF"
        >
          <div
            class="sc-ksZaOG qcpnK"
          />
          <div
            class="sc-hAZoDl hxXbIC"
          >
            <div
              aria-hidden="true"
              class="sc-fEOsli bxdcOC"
            >
              <div
                class="sc-bjUoiL kwJxD date container"
              />
              <div
                class="sc-idiyUo bvnbiS"
              >
                <h1
                  class="sc-eCYdqJ iRiQIC"
                >
                  Add a new blog
                </h1>
              </div>
            </div>
          </div>
        </div>
      </a>
      <a
        aria-label="Blog 1 , NaN Invalid Date"
        class="sc-evZas cmFdWC sc-fnykZs iutxuS blogs-list__card blogs-list__card--with-controls"
        href="/blog/asdfg"
      >
        <div
          class="sc-breuTD kENxYF"
        >
          <div
            class="sc-ksZaOG qcpnK"
          />
          <div
            class="sc-hAZoDl hxXbIC"
          >
            <div
              aria-hidden="true"
              class="sc-fEOsli bxdcOC"
            >
              <div
                class="sc-bjUoiL kwJxD date container"
              >
                <div
                  class="sc-hHLeRK hqAa-dx"
                >
                  <span
                    class="sc-iBkjds dCmxdX"
                  >
                    NaN Invalid Date
                  </span>
                </div>
                <div
                  class="sc-dmRaPn bMPiYX"
                >
                  <span
                    class="sc-iBkjds dCmxdX"
                  >
                    NaN
                  </span>
                </div>
                <div
                  class="sc-dmRaPn bMPiYX"
                >
                  <span
                    class="sc-iBkjds dCmxdX"
                  >
                    Invalid Date
                  </span>
                </div>
              </div>
              <div
                class="sc-idiyUo bvnbiS"
              >
                <h1
                  class="sc-eCYdqJ iRiQIC"
                >
                  Blog 1 
                </h1>
              </div>
            </div>
          </div>
        </div>
      </a>
      <button
        class="sc-iIPllB jBYTCb blogs-list__control"
        type="button"
      >
        <span
          class="sc-ezWOiH kElgck"
        >
          Delete blog
        </span>
      </button>
      <a
        aria-label="St Ives  2018, 23to30 Dec, Tagged travel"
        class="sc-evZas cmFdWC sc-fnykZs iutxuS blogs-list__card blogs-list__card--with-controls"
        href="/blog/zxywvuts"
      >
        <div
          class="sc-breuTD kENxYF"
        >
          <div
            class="sc-ksZaOG qcpnK"
          />
          <div
            class="sc-hAZoDl hxXbIC"
          >
            <div
              aria-hidden="true"
              class="sc-fEOsli bxdcOC"
            >
              <div
                class="sc-bjUoiL kwJxD date container"
              >
                <div
                  class="sc-hHLeRK hqAa-dx"
                >
                  <span
                    class="sc-iBkjds dCmxdX"
                  >
                    23-30 Dec
                  </span>
                </div>
                <div
                  class="sc-dmRaPn bMPiYX"
                >
                  <span
                    class="sc-iBkjds dCmxdX"
                  >
                    23-30
                  </span>
                </div>
                <div
                  class="sc-dmRaPn bMPiYX"
                >
                  <span
                    class="sc-iBkjds dCmxdX"
                  >
                    Dec
                  </span>
                </div>
              </div>
              <div
                class="sc-idiyUo bvnbiS"
              >
                <h1
                  class="sc-eCYdqJ iRiQIC"
                >
                  St Ives  2018
                </h1>
                <div
                  class="sc-fLlhyt ysNrz"
                >
                  <div
                    class="sc-bBrHrO"
                  >
                    <span
                      class="sc-ivTmOn nhHSy"
                      type="travel"
                    >
                      Travel
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="sc-dIouRR llajlo"
              >
                <div
                  class="image__outer sc-kgflAQ hWfXBG"
                >
                  <div
                    class="image__placeholder"
                    style="padding-bottom: 100%;"
                  >
                    <div
                      class="image__spinner-container"
                    >
                      <div
                        class="sc-bczRLJ hFnmit image__skeleton image__skeleton--animated"
                      >
                        <div
                          class="sc-gsnTZi iSNZRr"
                          style="margin-left: -0px;"
                        />
                      </div>
                    </div>
                    <img
                      alt="card"
                      class="image__img image__img--animated image__img--hidden image__img--light"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                    <img
                      alt="card"
                      class="image__img image__img--animated image__img--hidden image__img--dark"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                    <noscript />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </a>
      <button
        class="sc-iIPllB jBYTCb blogs-list__control"
        type="button"
      >
        <span
          class="sc-ezWOiH kElgck"
        >
          Delete blog
        </span>
      </button>
      <a
        aria-label="Untitled blog (DELETED), 23to30 Dec, Tagged travel"
        class="sc-evZas cmFdWC sc-fnykZs iutxuS blogs-list__card blogs-list__card--with-controls"
        href="/blog/mndyd8"
      >
        <div
          class="sc-breuTD kENxYF"
        >
          <div
            class="sc-ksZaOG qcpnK"
          />
          <div
            class="sc-hAZoDl hxXbIC"
          >
            <div
              aria-hidden="true"
              class="sc-fEOsli bxdcOC"
            >
              <div
                class="sc-bjUoiL kwJxD date container"
              >
                <div
                  class="sc-hHLeRK hqAa-dx"
                >
                  <span
                    class="sc-iBkjds dCmxdX"
                  >
                    23-30 Dec
                  </span>
                </div>
                <div
                  class="sc-dmRaPn bMPiYX"
                >
                  <span
                    class="sc-iBkjds dCmxdX"
                  >
                    23-30
                  </span>
                </div>
                <div
                  class="sc-dmRaPn bMPiYX"
                >
                  <span
                    class="sc-iBkjds dCmxdX"
                  >
                    Dec
                  </span>
                </div>
              </div>
              <div
                class="sc-idiyUo bvnbiS"
              >
                <h1
                  class="sc-eCYdqJ iRiQIC"
                >
                  Untitled blog (DELETED)
                </h1>
                <div
                  class="sc-fLlhyt ysNrz"
                >
                  <div
                    class="sc-bBrHrO"
                  >
                    <span
                      class="sc-ivTmOn nhHSy"
                      type="travel"
                    >
                      Travel
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="sc-dIouRR llajlo"
              >
                <div
                  class="image__outer sc-kgflAQ hWfXBG"
                >
                  <div
                    class="image__placeholder"
                    style="padding-bottom: 100%;"
                  >
                    <div
                      class="image__spinner-container"
                    >
                      <div
                        class="sc-bczRLJ hFnmit image__skeleton image__skeleton--animated"
                      >
                        <div
                          class="sc-gsnTZi iSNZRr"
                          style="margin-left: -0px;"
                        />
                      </div>
                    </div>
                    <img
                      alt="card"
                      class="image__img image__img--animated image__img--hidden image__img--light"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                    <img
                      alt="card"
                      class="image__img image__img--animated image__img--hidden image__img--dark"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                    <noscript />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </a>
      <button
        class="sc-iIPllB ijIIgj blogs-list__control"
        disabled=""
        type="button"
      >
        <span
          class="sc-ezWOiH kElgck"
        >
          Delete blog
        </span>
      </button>
    </div>
  </div>
  <div
    class="creative-commons__wrapper"
  >
    <div
      class="creative-commons__background"
    />
    <div
      class="subsection__outer creative-commons__inner"
    >
      <h3
        class="subsection__heading"
        id="copyright"
      >
        Copyright
      </h3>
      <span
        class="sc-dkzDqf fKpeRn"
      >
        Most of my photos are licensed under
         
        <a
          aria-label="Creative Commons BY-SA 3.0 (opens in a new tab)"
          class="sc-jqUVSM ehmyNV"
          href="https://creativecommons.org/licenses/by-sa/3.0/"
          rel="noopener noreferrer"
          target="_blank"
        >
          Creative Commons BY-SA 3.0
          <div
            class="sc-kDDrLX ffjHhF"
          >
            <svg
              class="sc-papXJ QvWXe sc-iqcoie iOIaxE"
              height="18"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.5 11.3c.4.4 1 .4 1.4 0L19 6.2V9c0 .6.4 1 1 1s1-.4 1-1V4c0-.6-.4-1-1-1h-5c-.6 0-1 .4-1 1s.4 1 1 1h2.4l-4.9 4.9c-.4.4-.4 1 0 1.4zM19 19c0 1.1-.9 2-2 2H5c-1.1 0-2-.9-2-2V7c0-1.1.9-2 2-2h7v2H5v12h12v-7h2"
              />
            </svg>
          </div>
        </a>
        .
        <br />
        If you are unsure about your right to use them please 
        <a
          class="sc-jqUVSM ehmyNV"
          href="/contact"
        >
          contact me
        </a>
        .
      </span>
    </div>
  </div>
</div>
`;

exports[`<BlogList /> should render correctly with blog load error 1`] = `
<div>
  <div
    class="sc-kLLXSd hRxycm containerstyles__StyledPageContainer-sc-1117fm5-0 bYpTfs"
    width="default"
  >
    <div
      class="sc-bczRLJ jxMqhd"
    >
      <div
        class="sc-gsnTZi iSNZRr"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-bczRLJ jxMqhd"
    >
      <div
        class="sc-gsnTZi iSNZRr"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-bczRLJ jxMqhd"
    >
      <div
        class="sc-gsnTZi iSNZRr"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-bczRLJ jxMqhd"
    >
      <div
        class="sc-gsnTZi iSNZRr"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-bczRLJ jxMqhd"
    >
      <div
        class="sc-gsnTZi iSNZRr"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="subsection__outer loading-cover__overlay--content"
    >
      <h3
        class="subsection__heading subsection__heading--no-padding"
        id="this-is-taking-a-while.-maybe-something-isn't-quite-right..."
      >
        This is taking a while. Maybe something isn't quite right...
      </h3>
    </div>
  </div>
  <div
    class="creative-commons__wrapper"
  >
    <div
      class="creative-commons__background"
    />
    <div
      class="subsection__outer creative-commons__inner"
    >
      <h3
        class="subsection__heading"
        id="copyright"
      >
        Copyright
      </h3>
      <span
        class="sc-dkzDqf fKpeRn"
      >
        Most of my photos are licensed under
         
        <a
          aria-label="Creative Commons BY-SA 3.0 (opens in a new tab)"
          class="sc-jqUVSM ehmyNV"
          href="https://creativecommons.org/licenses/by-sa/3.0/"
          rel="noopener noreferrer"
          target="_blank"
        >
          Creative Commons BY-SA 3.0
          <div
            class="sc-kDDrLX ffjHhF"
          >
            <svg
              class="sc-papXJ QvWXe sc-iqcoie iOIaxE"
              height="18"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.5 11.3c.4.4 1 .4 1.4 0L19 6.2V9c0 .6.4 1 1 1s1-.4 1-1V4c0-.6-.4-1-1-1h-5c-.6 0-1 .4-1 1s.4 1 1 1h2.4l-4.9 4.9c-.4.4-.4 1 0 1.4zM19 19c0 1.1-.9 2-2 2H5c-1.1 0-2-.9-2-2V7c0-1.1.9-2 2-2h7v2H5v12h12v-7h2"
              />
            </svg>
          </div>
        </a>
        .
        <br />
        If you are unsure about your right to use them please 
        <a
          class="sc-jqUVSM ehmyNV"
          href="/contact"
        >
          contact me
        </a>
        .
      </span>
    </div>
  </div>
</div>
`;

exports[`<BlogList /> should render correctly with blogs 1`] = `
<div>
  <div
    class="sc-kLLXSd hRxycm containerstyles__StyledPageContainer-sc-1117fm5-0 bYpTfs"
    width="default"
  >
    <div>
      <a
        aria-label="Blog 1 , NaN Invalid Date"
        class="sc-evZas cmFdWC sc-fnykZs iutxuS blogs-list__card"
        href="/blog/asdfg"
      >
        <div
          class="sc-breuTD kENxYF"
        >
          <div
            class="sc-ksZaOG qcpnK"
          />
          <div
            class="sc-hAZoDl hxXbIC"
          >
            <div
              aria-hidden="true"
              class="sc-fEOsli bxdcOC"
            >
              <div
                class="sc-bjUoiL kwJxD date container"
              >
                <div
                  class="sc-hHLeRK hqAa-dx"
                >
                  <span
                    class="sc-iBkjds dCmxdX"
                  >
                    NaN Invalid Date
                  </span>
                </div>
                <div
                  class="sc-dmRaPn bMPiYX"
                >
                  <span
                    class="sc-iBkjds dCmxdX"
                  >
                    NaN
                  </span>
                </div>
                <div
                  class="sc-dmRaPn bMPiYX"
                >
                  <span
                    class="sc-iBkjds dCmxdX"
                  >
                    Invalid Date
                  </span>
                </div>
              </div>
              <div
                class="sc-idiyUo bvnbiS"
              >
                <h1
                  class="sc-eCYdqJ iRiQIC"
                >
                  Blog 1 
                </h1>
              </div>
            </div>
          </div>
        </div>
      </a>
      <a
        aria-label="St Ives  2018, 23to30 Dec, Tagged travel"
        class="sc-evZas cmFdWC sc-fnykZs iutxuS blogs-list__card"
        href="/blog/zxywvuts"
      >
        <div
          class="sc-breuTD kENxYF"
        >
          <div
            class="sc-ksZaOG qcpnK"
          />
          <div
            class="sc-hAZoDl hxXbIC"
          >
            <div
              aria-hidden="true"
              class="sc-fEOsli bxdcOC"
            >
              <div
                class="sc-bjUoiL kwJxD date container"
              >
                <div
                  class="sc-hHLeRK hqAa-dx"
                >
                  <span
                    class="sc-iBkjds dCmxdX"
                  >
                    23-30 Dec
                  </span>
                </div>
                <div
                  class="sc-dmRaPn bMPiYX"
                >
                  <span
                    class="sc-iBkjds dCmxdX"
                  >
                    23-30
                  </span>
                </div>
                <div
                  class="sc-dmRaPn bMPiYX"
                >
                  <span
                    class="sc-iBkjds dCmxdX"
                  >
                    Dec
                  </span>
                </div>
              </div>
              <div
                class="sc-idiyUo bvnbiS"
              >
                <h1
                  class="sc-eCYdqJ iRiQIC"
                >
                  St Ives  2018
                </h1>
                <div
                  class="sc-fLlhyt ysNrz"
                >
                  <div
                    class="sc-bBrHrO"
                  >
                    <span
                      class="sc-ivTmOn nhHSy"
                      type="travel"
                    >
                      Travel
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="sc-dIouRR llajlo"
              >
                <div
                  class="image__outer sc-kgflAQ hWfXBG"
                >
                  <div
                    class="image__placeholder"
                    style="padding-bottom: 100%;"
                  >
                    <div
                      class="image__spinner-container"
                    >
                      <div
                        class="sc-bczRLJ hFnmit image__skeleton image__skeleton--animated"
                      >
                        <div
                          class="sc-gsnTZi iSNZRr"
                          style="margin-left: -0px;"
                        />
                      </div>
                    </div>
                    <img
                      alt="card"
                      class="image__img image__img--animated image__img--hidden image__img--light"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                    <img
                      alt="card"
                      class="image__img image__img--animated image__img--hidden image__img--dark"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                    <noscript />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </a>
      <a
        aria-label="Untitled blog (DELETED), 23to30 Dec, Tagged travel"
        class="sc-evZas cmFdWC sc-fnykZs iutxuS blogs-list__card"
        href="/blog/mndyd8"
      >
        <div
          class="sc-breuTD kENxYF"
        >
          <div
            class="sc-ksZaOG qcpnK"
          />
          <div
            class="sc-hAZoDl hxXbIC"
          >
            <div
              aria-hidden="true"
              class="sc-fEOsli bxdcOC"
            >
              <div
                class="sc-bjUoiL kwJxD date container"
              >
                <div
                  class="sc-hHLeRK hqAa-dx"
                >
                  <span
                    class="sc-iBkjds dCmxdX"
                  >
                    23-30 Dec
                  </span>
                </div>
                <div
                  class="sc-dmRaPn bMPiYX"
                >
                  <span
                    class="sc-iBkjds dCmxdX"
                  >
                    23-30
                  </span>
                </div>
                <div
                  class="sc-dmRaPn bMPiYX"
                >
                  <span
                    class="sc-iBkjds dCmxdX"
                  >
                    Dec
                  </span>
                </div>
              </div>
              <div
                class="sc-idiyUo bvnbiS"
              >
                <h1
                  class="sc-eCYdqJ iRiQIC"
                >
                  Untitled blog (DELETED)
                </h1>
                <div
                  class="sc-fLlhyt ysNrz"
                >
                  <div
                    class="sc-bBrHrO"
                  >
                    <span
                      class="sc-ivTmOn nhHSy"
                      type="travel"
                    >
                      Travel
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="sc-dIouRR llajlo"
              >
                <div
                  class="image__outer sc-kgflAQ hWfXBG"
                >
                  <div
                    class="image__placeholder"
                    style="padding-bottom: 100%;"
                  >
                    <div
                      class="image__spinner-container"
                    >
                      <div
                        class="sc-bczRLJ hFnmit image__skeleton image__skeleton--animated"
                      >
                        <div
                          class="sc-gsnTZi iSNZRr"
                          style="margin-left: -0px;"
                        />
                      </div>
                    </div>
                    <img
                      alt="card"
                      class="image__img image__img--animated image__img--hidden image__img--light"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                    <img
                      alt="card"
                      class="image__img image__img--animated image__img--hidden image__img--dark"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                    <noscript />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </a>
    </div>
  </div>
  <div
    class="creative-commons__wrapper"
  >
    <div
      class="creative-commons__background"
    />
    <div
      class="subsection__outer creative-commons__inner"
    >
      <h3
        class="subsection__heading"
        id="copyright"
      >
        Copyright
      </h3>
      <span
        class="sc-dkzDqf fKpeRn"
      >
        Most of my photos are licensed under
         
        <a
          aria-label="Creative Commons BY-SA 3.0 (opens in a new tab)"
          class="sc-jqUVSM ehmyNV"
          href="https://creativecommons.org/licenses/by-sa/3.0/"
          rel="noopener noreferrer"
          target="_blank"
        >
          Creative Commons BY-SA 3.0
          <div
            class="sc-kDDrLX ffjHhF"
          >
            <svg
              class="sc-papXJ QvWXe sc-iqcoie iOIaxE"
              height="18"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.5 11.3c.4.4 1 .4 1.4 0L19 6.2V9c0 .6.4 1 1 1s1-.4 1-1V4c0-.6-.4-1-1-1h-5c-.6 0-1 .4-1 1s.4 1 1 1h2.4l-4.9 4.9c-.4.4-.4 1 0 1.4zM19 19c0 1.1-.9 2-2 2H5c-1.1 0-2-.9-2-2V7c0-1.1.9-2 2-2h7v2H5v12h12v-7h2"
              />
            </svg>
          </div>
        </a>
        .
        <br />
        If you are unsure about your right to use them please 
        <a
          class="sc-jqUVSM ehmyNV"
          href="/contact"
        >
          contact me
        </a>
        .
      </span>
    </div>
  </div>
</div>
`;

exports[`<BlogList /> should render correctly with initial state 1`] = `
<div>
  <div
    class="sc-kLLXSd hRxycm containerstyles__StyledPageContainer-sc-1117fm5-0 bYpTfs"
    width="default"
  >
    <div
      class="sc-bczRLJ jxMqhd"
    >
      <div
        class="sc-gsnTZi iSNZRr"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-bczRLJ jxMqhd"
    >
      <div
        class="sc-gsnTZi iSNZRr"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-bczRLJ jxMqhd"
    >
      <div
        class="sc-gsnTZi iSNZRr"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-bczRLJ jxMqhd"
    >
      <div
        class="sc-gsnTZi iSNZRr"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-bczRLJ jxMqhd"
    >
      <div
        class="sc-gsnTZi iSNZRr"
        style="margin-left: -0px;"
      />
    </div>
  </div>
  <div
    class="creative-commons__wrapper"
  >
    <div
      class="creative-commons__background"
    />
    <div
      class="subsection__outer creative-commons__inner"
    >
      <h3
        class="subsection__heading"
        id="copyright"
      >
        Copyright
      </h3>
      <span
        class="sc-dkzDqf fKpeRn"
      >
        Most of my photos are licensed under
         
        <a
          aria-label="Creative Commons BY-SA 3.0 (opens in a new tab)"
          class="sc-jqUVSM ehmyNV"
          href="https://creativecommons.org/licenses/by-sa/3.0/"
          rel="noopener noreferrer"
          target="_blank"
        >
          Creative Commons BY-SA 3.0
          <div
            class="sc-kDDrLX ffjHhF"
          >
            <svg
              class="sc-papXJ QvWXe sc-iqcoie iOIaxE"
              height="18"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.5 11.3c.4.4 1 .4 1.4 0L19 6.2V9c0 .6.4 1 1 1s1-.4 1-1V4c0-.6-.4-1-1-1h-5c-.6 0-1 .4-1 1s.4 1 1 1h2.4l-4.9 4.9c-.4.4-.4 1 0 1.4zM19 19c0 1.1-.9 2-2 2H5c-1.1 0-2-.9-2-2V7c0-1.1.9-2 2-2h7v2H5v12h12v-7h2"
              />
            </svg>
          </div>
        </a>
        .
        <br />
        If you are unsure about your right to use them please 
        <a
          class="sc-jqUVSM ehmyNV"
          href="/contact"
        >
          contact me
        </a>
        .
      </span>
    </div>
  </div>
</div>
`;

exports[`<BlogList /> should render correctly with ssrBlogs 1`] = `
<div>
  <div
    class="sc-kLLXSd hRxycm containerstyles__StyledPageContainer-sc-1117fm5-0 bYpTfs"
    width="default"
  >
    <div>
      <a
        aria-label="Blog 1 , NaN Invalid Date"
        class="sc-evZas cmFdWC sc-fnykZs iutxuS blogs-list__card"
        href="/blog/asdfg"
      >
        <div
          class="sc-breuTD kENxYF"
        >
          <div
            class="sc-ksZaOG qcpnK"
          />
          <div
            class="sc-hAZoDl hxXbIC"
          >
            <div
              aria-hidden="true"
              class="sc-fEOsli bxdcOC"
            >
              <div
                class="sc-bjUoiL kwJxD date container"
              >
                <div
                  class="sc-hHLeRK hqAa-dx"
                >
                  <span
                    class="sc-iBkjds dCmxdX"
                  >
                    NaN Invalid Date
                  </span>
                </div>
                <div
                  class="sc-dmRaPn bMPiYX"
                >
                  <span
                    class="sc-iBkjds dCmxdX"
                  >
                    NaN
                  </span>
                </div>
                <div
                  class="sc-dmRaPn bMPiYX"
                >
                  <span
                    class="sc-iBkjds dCmxdX"
                  >
                    Invalid Date
                  </span>
                </div>
              </div>
              <div
                class="sc-idiyUo bvnbiS"
              >
                <h1
                  class="sc-eCYdqJ iRiQIC"
                >
                  Blog 1 
                </h1>
              </div>
            </div>
          </div>
        </div>
      </a>
      <a
        aria-label="St Ives  2018, 23to30 Dec, Tagged travel"
        class="sc-evZas cmFdWC sc-fnykZs iutxuS blogs-list__card"
        href="/blog/zxywvuts"
      >
        <div
          class="sc-breuTD kENxYF"
        >
          <div
            class="sc-ksZaOG qcpnK"
          />
          <div
            class="sc-hAZoDl hxXbIC"
          >
            <div
              aria-hidden="true"
              class="sc-fEOsli bxdcOC"
            >
              <div
                class="sc-bjUoiL kwJxD date container"
              >
                <div
                  class="sc-hHLeRK hqAa-dx"
                >
                  <span
                    class="sc-iBkjds dCmxdX"
                  >
                    23-30 Dec
                  </span>
                </div>
                <div
                  class="sc-dmRaPn bMPiYX"
                >
                  <span
                    class="sc-iBkjds dCmxdX"
                  >
                    23-30
                  </span>
                </div>
                <div
                  class="sc-dmRaPn bMPiYX"
                >
                  <span
                    class="sc-iBkjds dCmxdX"
                  >
                    Dec
                  </span>
                </div>
              </div>
              <div
                class="sc-idiyUo bvnbiS"
              >
                <h1
                  class="sc-eCYdqJ iRiQIC"
                >
                  St Ives  2018
                </h1>
                <div
                  class="sc-fLlhyt ysNrz"
                >
                  <div
                    class="sc-bBrHrO"
                  >
                    <span
                      class="sc-ivTmOn nhHSy"
                      type="travel"
                    >
                      Travel
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="sc-dIouRR llajlo"
              >
                <div
                  class="image__outer sc-kgflAQ hWfXBG"
                >
                  <div
                    class="image__placeholder"
                    style="padding-bottom: 100%;"
                  >
                    <div
                      class="image__spinner-container"
                    >
                      <div
                        class="sc-bczRLJ hFnmit image__skeleton image__skeleton--animated"
                      >
                        <div
                          class="sc-gsnTZi iSNZRr"
                          style="margin-left: -0px;"
                        />
                      </div>
                    </div>
                    <img
                      alt="card"
                      class="image__img image__img--animated image__img--hidden image__img--light"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                    <img
                      alt="card"
                      class="image__img image__img--animated image__img--hidden image__img--dark"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                    <noscript />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </a>
      <a
        aria-label="Untitled blog (DELETED), 23to30 Dec, Tagged travel"
        class="sc-evZas cmFdWC sc-fnykZs iutxuS blogs-list__card"
        href="/blog/mndyd8"
      >
        <div
          class="sc-breuTD kENxYF"
        >
          <div
            class="sc-ksZaOG qcpnK"
          />
          <div
            class="sc-hAZoDl hxXbIC"
          >
            <div
              aria-hidden="true"
              class="sc-fEOsli bxdcOC"
            >
              <div
                class="sc-bjUoiL kwJxD date container"
              >
                <div
                  class="sc-hHLeRK hqAa-dx"
                >
                  <span
                    class="sc-iBkjds dCmxdX"
                  >
                    23-30 Dec
                  </span>
                </div>
                <div
                  class="sc-dmRaPn bMPiYX"
                >
                  <span
                    class="sc-iBkjds dCmxdX"
                  >
                    23-30
                  </span>
                </div>
                <div
                  class="sc-dmRaPn bMPiYX"
                >
                  <span
                    class="sc-iBkjds dCmxdX"
                  >
                    Dec
                  </span>
                </div>
              </div>
              <div
                class="sc-idiyUo bvnbiS"
              >
                <h1
                  class="sc-eCYdqJ iRiQIC"
                >
                  Untitled blog (DELETED)
                </h1>
                <div
                  class="sc-fLlhyt ysNrz"
                >
                  <div
                    class="sc-bBrHrO"
                  >
                    <span
                      class="sc-ivTmOn nhHSy"
                      type="travel"
                    >
                      Travel
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="sc-dIouRR llajlo"
              >
                <div
                  class="image__outer sc-kgflAQ hWfXBG"
                >
                  <div
                    class="image__placeholder"
                    style="padding-bottom: 100%;"
                  >
                    <div
                      class="image__spinner-container"
                    >
                      <div
                        class="sc-bczRLJ hFnmit image__skeleton image__skeleton--animated"
                      >
                        <div
                          class="sc-gsnTZi iSNZRr"
                          style="margin-left: -0px;"
                        />
                      </div>
                    </div>
                    <img
                      alt="card"
                      class="image__img image__img--animated image__img--hidden image__img--light"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                    <img
                      alt="card"
                      class="image__img image__img--animated image__img--hidden image__img--dark"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                    <noscript />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </a>
    </div>
  </div>
  <div
    class="creative-commons__wrapper"
  >
    <div
      class="creative-commons__background"
    />
    <div
      class="subsection__outer creative-commons__inner"
    >
      <h3
        class="subsection__heading"
        id="copyright"
      >
        Copyright
      </h3>
      <span
        class="sc-dkzDqf fKpeRn"
      >
        Most of my photos are licensed under
         
        <a
          aria-label="Creative Commons BY-SA 3.0 (opens in a new tab)"
          class="sc-jqUVSM ehmyNV"
          href="https://creativecommons.org/licenses/by-sa/3.0/"
          rel="noopener noreferrer"
          target="_blank"
        >
          Creative Commons BY-SA 3.0
          <div
            class="sc-kDDrLX ffjHhF"
          >
            <svg
              class="sc-papXJ QvWXe sc-iqcoie iOIaxE"
              height="18"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.5 11.3c.4.4 1 .4 1.4 0L19 6.2V9c0 .6.4 1 1 1s1-.4 1-1V4c0-.6-.4-1-1-1h-5c-.6 0-1 .4-1 1s.4 1 1 1h2.4l-4.9 4.9c-.4.4-.4 1 0 1.4zM19 19c0 1.1-.9 2-2 2H5c-1.1 0-2-.9-2-2V7c0-1.1.9-2 2-2h7v2H5v12h12v-7h2"
              />
            </svg>
          </div>
        </a>
        .
        <br />
        If you are unsure about your right to use them please 
        <a
          class="sc-jqUVSM ehmyNV"
          href="/contact"
        >
          contact me
        </a>
        .
      </span>
    </div>
  </div>
</div>
`;
